--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/elierotenberg/react-rails-app/issues"
   },
-  "homepage": "https://github.com/elierotenberg/react-rails-app"
+  "homepage": "https://github.com/elierotenberg/react-rails-app",
+  "dependencies": {
+    "express": "^4.9.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.0.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-react": "^0.9.0",
+    "grunt-regenerator": "^1.1.0",
+    "lodash": "^2.4.1"
+  }
 }
